# simple-a2a-registry

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  debug_claim.py  docker-compose.yml  fix_dtm_schema.py  is_prime.py  locustfile.py  pyproject.toml  start_test_server.py  test_migration_chain.py  test_swarm_api.py
a2a-admin/: build-verify.sh  index.html  package-lock.json  package.json  vite.config.ts
docs/: API.md  a2a-v1-agent-card-oauth-design.md  architecture-v2.md  architecture.html  architecture.md  client-architecture.html  deployment-guide.md  enterprise-architecture.md  fix-spec.md  harness-repo-analysis.md  oauth-design.md  plugin-system.md  product-manual.md  qa-report.md  resilient-distribution-architecture.md  security-console-ui-spec.md  security-harness-design.md  spec-agent-runtime-contract.md  task-distribution-architecture.html  task-distribution-research.md  ws-task-lifecycle.md
examples/: a2a_coder_agent.py  a2a_opencode_agent.py  a2a_opencode_agent_README.md  conditional-workflow.yaml  diamond-workflow.yaml  run_a2a_agent.sh  run_agent.py  sdk_usage.py  sequential-workflow.yaml  simple_a2a_agent.py  test_int_priority.sh
migrations/: env.py  models.py
plugin/: plugin.yaml
scripts/: dev.sh  migrate_sqlite_to_mysql.py  prod.sh
simple_a2a_registry/: __init__.py  __main__.py  audit.py  auth.py  cli.py  cli_agent.py  cli_history.py  cli_memory.py  cli_task.py  cli_workflow.py  client.py  config.py  discovery.py  errors.py  health.py  log.py  metrics.py  models.py  plugin.py  rate_limiter.py  server.py  (+8 more)
(+171 files in other folders)
