[project]
name = "simple-a2a-registry"
version = "1.0.0"
description = "Simple A2A Registry — an open Agent-to-Agent registry server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "NousResearch", email = "dev@nousresearch.com" },
]

dependencies = [
    "aiohttp>=3.9,<4",
    "aiohttp-cors>=0.7",
    "pyjwt>=2.8,<3",
]

[project.scripts]
a2a-registry = "simple_a2a_registry.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["simple_a2a_registry*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (long-running soak tests, >1 min)",
]

[tool.coverage.run]
source = ["simple_a2a_registry"]